--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
-title: [Blanket Statemet at CSTA 2019]
+title: []
 description: [Make a blanket for a child in distress]
