--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: [Blanket Statement]
-description: [Make a blanket for a child in distress at CSTA 2019
+description: [Make a blanket for a child in distress at CSTA 2019]
