--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: jekyll-theme-libretto
+remote_theme: bmcmurray/hekyll
 title: [Blanket Statement]
 description: [Help crowdknit a blanket for a child in distress at CSTA 2019]
