--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: [Blanket Statement]
 description: [Help crowdknit a blanket for a child in distress at CSTA 2019]
-remote_theme: ferrolho/jekyll-theme-libretto
+theme: ferrolho/jekyll-theme-libretto
